# streamview

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
frontend/: index.html  main.js  package-lock.json  package.json  webpack.config.js
frontend/src/: chart.js  main.js
frontend/src/components/: lineChart.js  videoPlayer.js
frontend/src/css/: video-js.css
frontend/static/: dashboard.js
frontend/templates/: index.html
src/streamview/: __main__.py  app.py  config.py  config.yaml  main.py  runner.py  socket_manager.py  stream_server.py
src/streamview/frontend/: chart.js  index.html  main.js  stream.js
src/streamview/frontend/templates/: index.html
src/streamview/nodes/: __init__.py  frames.py  numerics.py
src/streamview/static/js/: chart.js  stream.js
src/streamview/static/templates/: index.html
tests/: test_e2e.py
