[project]
name = "streamview"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Raymond W. Chang", email = "raymond.w.jang@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.12", "xarray>=2025.3.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
